<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_donate_app"
        android:icon="@drawable/ic_thumb_up_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_donate_app"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_hosts"
        android:icon="@drawable/ic_server_white_24dp"
        android:orderInCategory="101"
        android:title="@string/action_hosts"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

</menu>
