<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.matungos.sshing.presentation.addcommand.AddCommandViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/item_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:transitionName="@string/add_command_detail_transition_name"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/commandLabelTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_command_label_hint"
                android:theme="@style/TextInputLayout"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commandLabelEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword"
                    android:text="@={viewModel.command.label}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/commandStringTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_command_string_hint"
                android:theme="@style/TextInputLayout"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/commandStringEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword"
                    android:text="@={viewModel.command.command}" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/selectHostButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.getHostButtonText}"
                    android:textAllCaps="false"
                    android:textColor="@color/textColorPrimary"
                    tools:text="router" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addHostFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:contentDescription="@string/add_host_title"
                    android:src="@drawable/ic_add_white_24dp"
                    android:transitionName="@{@string/add_host_fab_transition_name}"
                    app:backgroundTint="@color/colorPrimary"
                    app:fabSize="mini"
                    app:tint="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/selectColorButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_command_select_color_text"
                    android:textAllCaps="false"
                    android:textColor="@color/textColorPrimary" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/colorFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    app:backgroundTint="@{viewModel.color}"
                    app:fabSize="mini"
                    app:tint="@android:color/white" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/alertCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="@={viewModel.isCritical}"
                android:onCheckedChanged="@{() -> viewModel.isCriticalChanged()}"
                android:text="@string/add_command_critical_text" />

            <CheckBox
                android:id="@+id/emptyResponseCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="@={viewModel.doNotNotifyEmptyResponse}"
                android:onCheckedChanged="@{() -> viewModel.doNotNotifyEmptyResponseChanged()}"
                android:text="@string/add_command_empty_response_text" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
